T-7195 theme/standard-totara/styles_totara.css: hopefully fixed the block header wrap issue in chrome

--- a/theme/standard-totara/styles_totara.css
+++ b/theme/standard-totara/styles_totara.css
@@ -71,7 +71,7 @@ div.course-content  #layout-table {
 
 #left-column .block_admin_tree div.header {
     margin-top: 5px;
-    padding: 7px 20px;
+    padding: 7px 5px 7px 20px;
 }
 
 #left-column .block_admin_tree {
